--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Layanan Internet di Tebing Tinggi</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="corenet adalah layanan isp atau penyedia internet berlokasi di tebing tinggi" name="description">
+  <meta content="internet tebing tinggi, core, internet, isp, corenetid, layanan internet" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/Corenet.png" rel="icon">
