--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container-fluid">
 
       <div class="logo">
-        <h1><a href="https://corenet-tebingtinggi.vercel.app/">CoreNet</a></h1>
+        <h1><a href="#">CoreNet</a></h1>
         
       </div>
 
@@ -53,7 +53,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Welcome to <a href="https://corenet-tebingtinggi.vercel.app">CoreNet</a></h1>
+      <h1>Welcome to <a href="#">CoreNet</a></h1>
     </div>
   </section><!-- #hero -->
 
